schema/testdata/validation_expression_nullish_optional_comparison/schema.keel
model Post {
    fields {
        identity Identity?
    }

    operations {
        update updatePost(id) with (identity) {
            @permission(expression: post.identity == null)
        }
    }
}
